// Copyright 2017 Sourcerer, Inc. All Rights Reserved.
// Author: Anatoly Kislov (anatoly@sourcerer.io)

syntax = "proto3";

// Java compiler settings.
package app;
option java_package = "app";
option java_outer_classname = "Protos";

// Commit.
message Commit {
    // Re-hash of hash of a commit.
    string rehash = 1;

    // Hash of repo.
    string repo_rehash = 2;

    // Re-hash of hash of tree object of a commit.
    string tree_rehash = 3;

    // Information about author of a commit.
    string author_name = 4;
    string author_email = 5;

    // Timestamp of a commit creation.
    uint32 date = 6;

    // Is quality commit.
    bool is_qommit = 7;

    // Number of lines for a whole commit.
    int32 num_lines_added = 8;
    int32 num_lines_deleted = 9;

    // Tech stats on a commit.
    repeated CommitStats stats = 10;
}

// Tech stats on a commit.
message CommitStats {
    // Number of lines for a specific technology.
    int32 num_lines_added = 1;
    int32 num_lines_deleted = 2;

    // Technology type (language/framework/library).
    int32 type = 3;

    // Technology name.
    string tech = 4;
}

// Used to send multiple commits in one request.
message CommitGroup {
    repeated Commit commits = 1;
}

// Key-value statistics for fun facts.
message Fact {
    string key = 1;
    double value = 2;
    string email = 3;
    string repo_rehash = 4;
}

// Used to send multiple stats in one request.
message FactGroup {
    repeated Fact facts = 1;
}

// User properties and indentity information about repos.
message User {
    // List of known repos containing basic information for indentifying repo.
    repeated Repo repos = 1;
}

// Repository parameters for hashing.
message Repo {
    // Repository rehash according to initial commit rehash, remote and user
    // handle if no remote presented.
    string rehash = 1;

    // Rehash of first commit in repo. Used for indentifying forks.
    string initial_commit_rehash = 2;

    // Email of app user from git config of repo.
    string user_email = 3;

    // Authors' email filter for hashed commits. If empty list then hash only
    // commits that created by current user.
    repeated string emails = 4;

    // Raw commits server history. Used to find overlap of commits. Hashing
    // starts after last commit from the overlap.
    repeated Commit commits = 5;
}
